# AI-EXPRESS

./: CMakeLists.txt  LICENSE  README.md  build.sh  deploy.sh  deploy_ut.sh  run.sh  run_ut.sh  xstream_xproto_build.sh
source/common/viowrapper/: CMakeLists.txt  run.sh
source/common/viowrapper/config/x3dev/: iot_vio_x3_1080_fb.json  iot_vio_x3_imx327.json  iot_vio_x3_os8a10.json  iot_vio_x3_s5kgm1sp.json  iot_vio_x3_s5kgm1sp_2160p.json
source/common/viowrapper/include/: vio_debug.h  vio_wrapper_global.h
source/common/viowrapper/src/: vio_wrapper_global.cpp
source/common/viowrapper/test/: CMakeLists.txt  gtest_main.cc  vio_wrapper_test.cpp
source/common/xproto/framework/: CMakeLists.txt
source/common/xproto/framework/sample/: CMakeLists.txt  CMakeLists.txt_external  README.md_external  build.sh_external  sample_plugin.cpp
source/common/xproto/framework/src/plugin/: xplugin.cpp  xpluginasync.cpp
source/common/xproto/framework/test/: CMakeLists.txt
source/common/xproto/framework/tutorials/stage1/: CMakeLists.txt  README.md  stage1_sample_plugin.cpp
source/common/xproto/framework/tutorials/stage2/: CMakeLists.txt  stage2_sample_plugin.cpp
source/common/xproto/framework/tutorials/stage3/: CMakeLists.txt  stage3_sample_plugin.cpp
source/common/xproto/plugins/multisourcewebsocketplugin/: CMakeLists.txt
source/common/xproto/plugins/multisourcewebsocketplugin/src/: convert.cpp  uws_server.cpp  websocketplugin.cpp  websoketconfig.cpp
source/common/xproto/python_api/: CMakeLists.txt
source/common/xproto/python_api/include/: smart_helper.h  websocketplg_helper.h
source/common/xproto/python_api/package/tests/: test_async.py
source/common/xproto/python_api/package/xproto/: commands.py  global_var.py  xproto.py
source/common/xproto/python_api/src/: smart_helper.cpp  websocketplg_helper.cpp  wrapper.cpp
source/common/xstream/framework/: CMakeLists.txt  README.md
source/common/xstream/framework/benchmark/: benchmark_main.cc
source/common/xstream/framework/benchmark/method/: method_factory.cc  passthrough_method.h
source/common/xstream/framework/example/bbox_filter/: CMakeLists.txt
source/common/xstream/framework/include/hobotxsdk/: xstream_data.h  xstream_sdk.h
source/common/xstream/framework/include/hobotxstream/: framework_data.h  method.h  node.h  scheduler.h  xstream.h
source/common/xstream/framework/src/: method_manager.cpp  node.cpp  scheduler.cpp  thread_pool.cpp  xstream.cpp
source/common/xstream/framework/src/hobotsdk/: schedulerV2.cpp
source/common/xstream/framework/test/: CMakeLists.txt
source/common/xstream/framework/tools/: README.md
source/common/xstream/framework/tutorials/stage1/: CMakeLists.txt  bbox_filter_main.cc
source/common/xstream/framework/tutorials/stage2/: CMakeLists.txt  stage2_multithread.cc
source/common/xstream/framework/tutorials/stage3/: CMakeLists.txt  update_param_main.cc
source/common/xstream/framework/tutorials/stage4/: CMakeLists.txt  method_factory.cpp  multisource_main.cpp
source/common/xstream/framework/tutorials/stage5/: CMakeLists.txt  method_factory.cc  timeout_alarm_sync_main.cc
source/common/xstream/framework/tutorials/stage6/: CMakeLists.txt
source/common/xstream/framework/tutorials/stage7/: CMakeLists.txt
source/common/xstream/framework/tutorials/stage8/: CMakeLists.txt  sub_workflow_main.cc
source/common/xstream/framework/tutorials/stage9/: CMakeLists.txt  best_effort_pass_through_method_main.cc  best_effort_pass_through_method_main_2.cc  (+3 more)
source/solution_zoo/apa/: CMakeLists.txt  main.cpp  main_horizon.cpp  method_factory.cpp
source/solution_zoo/apa/analysisplugin/: CMakeLists.txt
source/solution_zoo/apa/canplugin/: CMakeLists.txt
source/solution_zoo/apa/common/: data.h
source/solution_zoo/apa/configs/: apa_config.json  apa_detection.json  can_config.json  postprocess_apa_detection.json  postprocess_apa_multitask.json  predict_apa_multitask.json  websocket_config.json
source/solution_zoo/apa/configs/configs/: camera.json.j3dev  ch1.json
source/solution_zoo/apa/displayplugin/: CMakeLists.txt
source/solution_zoo/apa/displayplugin/config/: displayplugin_config.json
source/solution_zoo/apa/gdcplugin/: CMakeLists.txt
source/solution_zoo/apa/gdcplugin/config/: gdcplugin_config.json
source/solution_zoo/apa/gdcplugin/test/: gtest_api.cpp  gtest_main.cc
source/solution_zoo/apa/multismartplugin/: CMakeLists.txt
source/solution_zoo/apa/multismartplugin/config/: face_body_solution.json
source/solution_zoo/apa/multivioplugin/: CMakeLists.txt
source/solution_zoo/apa/multivioplugin/configs/: camera.json.j3dev  hb_xj3dev.json
source/solution_zoo/apa/multivioplugin/test/: CMakeLists.txt  gtest_api.cpp
source/solution_zoo/apa/multiwebsocketplugin/: CMakeLists.txt
source/solution_zoo/apa/multiwebsocketplugin/configs/: websocket_config.json
source/solution_zoo/apa/multiwebsocketplugin/src/: convert.cpp  uws_server.cpp  websocketplugin.cpp  websoketconfig.cpp
source/solution_zoo/apa/test/: CMakeLists.txt  main.cpp
source/solution_zoo/edu_body/: CMakeLists.txt  main.cpp  method_factory.cpp
source/solution_zoo/edu_body/configs/: body_detection.json  body_solution.json  dance_detection.json  dance_detection_multitask_960x544.json  dance_solution_multitask_960x544.json  gesture_det.json  lmk_106pts.json
source/solution_zoo/multisourceinput/: CMakeLists.txt  main.cpp
source/solution_zoo/multisourceinput/configs/: apa_multitask.json  detection.json  displayplugin_config.json  face_pose_lmk.json  ipm_corner_postprocess.json  ipm_corner_predict.json  ipm_parking_postprocess.json  ipm_parking_predict.json  postprocess.json  postprocess_apa_box_corner_mask.json  predict.json  predict_apa_box_corner_mask.json  websocket_config.json
source/solution_zoo/multisourceinput/configs/configs/: ch0.json  ch2.json  ch3.json  hb_vio_config.json.j3dev  hb_xj3dev.json  ov10635_yuv_1280x720_offline_Pipeline_960_4pipes.json
source/solution_zoo/multisourceinput/test/: CMakeLists.txt  main.cpp
source/solution_zoo/xstream/methods/lowpassfiltermethod/: CMakeLists.txt
(+1432 files in other folders)
